--- a/class01-python/Exercise_sheet_2_oop.ipynb
+++ b/class01-python/Exercise_sheet_2_oop.ipynb
@@ -30,7 +30,27 @@
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Customer:\n",
+    "    def __init__(self, name:str, birthdate:str, account_number:str, secret_code:str, balance:float):\n",
+    "        self.name = name\n",
+    "        self.birthdate = birthdate\n",
+    "        self.account_number = account_number\n",
+    "        self.secret_code = secret_code\n",
+    "        self.balance = balance\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return f'{self.name}, born on {self.birthdate}, account {self.account_number}, {self.balance} EUR' \n",
+    "\n",
+    "    def debit(self, som):\n",
+    "        if som <= self.balance:\n",
+    "            self.balance -= som\n",
+    "        else:\n",
+    "            raise ValueError\n",
+    "            return None\n",
+    "    def credit(self, som):\n",
+    "        self.balancr += som"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -74,6 +94,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -99,7 +124,15 @@
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class ATM:\n",
+    "    def __init__(self, lcustomers, n50, n20, n10):\n",
+    "        self.lcustomers = lcustomers\n",
+    "        self.n50 = n50\n",
+    "        self.n20 = n20\n",
+    "        self.n10 = n10\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
