Ex1 complete, Ex2 solve ReactorNotRestartable issue

--- a/class02-http-examples/requests_examples.ipynb
+++ b/class02-http-examples/requests_examples.ipynb
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "f8d79630",
    "metadata": {},
    "outputs": [
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "a8220926",
    "metadata": {},
    "outputs": [],
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "e2fdfe36",
    "metadata": {},
    "outputs": [],
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "3135b9ab",
    "metadata": {},
    "outputs": [
@@ -1942,7 +1942,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1956,7 +1956,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
