exercise 3 semi-done To-Do2.2  2.3 (smart way),

--- a/class03-apis-examples/wikipedia_examples.ipynb
+++ b/class03-apis-examples/wikipedia_examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f03706b0",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "9abb5f38",
    "metadata": {},
    "outputs": [
@@ -23,15 +23,15 @@
        " 'Schengen Information System',\n",
        " 'Sirene (disambiguation)',\n",
        " 'Mississippi Mermaid',\n",
-       " 'Sirene (magazine)',\n",
        " 'French ship Sirène',\n",
-       " '1009 Sirene',\n",
+       " 'Sirene (magazine)',\n",
        " 'Kashkaval',\n",
        " 'French submarine Sirène (Q123)',\n",
-       " 'A Mermaid in Paris']"
+       " 'A Mermaid in Paris',\n",
+       " 'Sirene (barque)']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "93999146",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
        "['Ford Motor Company', 'Ford', 'Gerald Ford']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "a0b12090",
    "metadata": {},
    "outputs": [
@@ -1183,7 +1183,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1197,7 +1197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
