--- a/class04-mongo-examples/mongo_examples.ipynb
+++ b/class04-mongo-examples/mongo_examples.ipynb
@@ -10,8 +10,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pymongo in /home/anna/Documents/PhDWork/Teaching/ex-env/lib/python3.8/site-packages (4.3.3)\r\n",
-      "Requirement already satisfied: dnspython<3.0.0,>=1.16.0 in /home/anna/Documents/PhDWork/Teaching/ex-env/lib/python3.8/site-packages (from pymongo) (2.3.0)\r\n"
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting pymongo\n",
+      "  Downloading pymongo-4.10.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (22 kB)\n",
+      "Collecting dnspython<3.0.0,>=1.16.0 (from pymongo)\n",
+      "  Downloading dnspython-2.7.0-py3-none-any.whl.metadata (5.8 kB)\n",
+      "Downloading pymongo-4.10.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.4 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.4/1.4 MB\u001b[0m \u001b[31m3.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading dnspython-2.7.0-py3-none-any.whl (313 kB)\n",
+      "Installing collected packages: dnspython, pymongo\n",
+      "Successfully installed dnspython-2.7.0 pymongo-4.10.1\n"
      ]
     }
    ],
@@ -31,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "a3fedecc",
    "metadata": {},
    "outputs": [],
@@ -55,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "07304b42",
    "metadata": {},
    "outputs": [],
@@ -65,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "40891818",
    "metadata": {},
    "outputs": [
@@ -101,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "9ff5bc2f",
    "metadata": {},
    "outputs": [
@@ -159,7 +167,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
+   "id": "ada40a44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Audi\n",
+      "Mercedes\n",
+      "Bentley\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pymongo import MongoClient\n",
+    "client = MongoClient('mongodb://localhost:27017/')\n",
+    "with client:\n",
+    "    db = client.testdb\n",
+    "    expensive = db.cars.find({'price': {'$gt': 50000}})\n",
+    "    for ecar in expensive:\n",
+    "        print(ecar['name'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "809d4020",
    "metadata": {},
    "outputs": [
@@ -182,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "04ed6b96",
    "metadata": {},
    "outputs": [
@@ -331,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "7820e9c4",
    "metadata": {},
    "outputs": [
@@ -433,7 +467,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -447,7 +481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
