--- a/class05-sql-examples/sql_python_examples.ipynb
+++ b/class05-sql-examples/sql_python_examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "43b8345e",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "cffb8955",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "99b78db8",
    "metadata": {},
    "outputs": [
@@ -56,8 +56,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(SELECT price FROM stocks WHERE trans='BUY')\n",
-      "[('2006-01-05', 'BUY', 'RHAT', 100.0, 35.14), ('2006-01-05', 'BUY', 'RHAT', 100.0, 56.0), ('2006-01-05', 'BUY', 'RHAT', 100.0, 35.14), ('2006-01-05', 'BUY', 'RHAT', 100.0, 35.14)]\n"
+      "[('2006-01-05', 'BUY', 'RHAT', 100.0, 35.14), ('2006-01-05', 'BUY', 'RHAT', 100.0, 10.0)]\n"
      ]
     }
    ],
@@ -81,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "af406650",
    "metadata": {},
    "outputs": [
@@ -89,9 +88,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: sqlalchemy in /home/anna/Documents/PhDWork/Teaching/ex-env/lib/python3.8/site-packages (2.0.1)\r\n",
-      "Requirement already satisfied: typing-extensions>=4.2.0 in /home/anna/Documents/PhDWork/Teaching/ex-env/lib/python3.8/site-packages (from sqlalchemy) (4.4.0)\r\n",
-      "Requirement already satisfied: greenlet!=0.4.17; platform_machine == \"aarch64\" or (platform_machine == \"ppc64le\" or (platform_machine == \"x86_64\" or (platform_machine == \"amd64\" or (platform_machine == \"AMD64\" or (platform_machine == \"win32\" or platform_machine == \"WIN32\"))))) in /home/anna/Documents/PhDWork/Teaching/ex-env/lib/python3.8/site-packages (from sqlalchemy) (2.0.2)\r\n"
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting sqlalchemy\n",
+      "  Downloading SQLAlchemy-2.0.37-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (9.6 kB)\n",
+      "Collecting greenlet!=0.4.17 (from sqlalchemy)\n",
+      "  Downloading greenlet-3.1.1-cp310-cp310-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl.metadata (3.8 kB)\n",
+      "Requirement already satisfied: typing-extensions>=4.6.0 in /home/tacit/.local/lib/python3.10/site-packages (from sqlalchemy) (4.12.2)\n",
+      "Downloading SQLAlchemy-2.0.37-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.1 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.1/3.1 MB\u001b[0m \u001b[31m19.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading greenlet-3.1.1-cp310-cp310-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl (599 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m599.5/599.5 kB\u001b[0m \u001b[31m10.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: greenlet, sqlalchemy\n",
+      "Successfully installed greenlet-3.1.1 sqlalchemy-2.0.37\n"
      ]
     }
    ],
@@ -101,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "d089bd20",
    "metadata": {},
    "outputs": [
@@ -109,7 +117,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_352178/2729954081.py:5: MovedIn20Warning: The ``declarative_base()`` function is now available as sqlalchemy.orm.declarative_base(). (deprecated since: 2.0) (Background on SQLAlchemy 2.0 at: https://sqlalche.me/e/b8d9)\n",
+      "/tmp/ipykernel_322687/2729954081.py:5: MovedIn20Warning: The ``declarative_base()`` function is now available as sqlalchemy.orm.declarative_base(). (deprecated since: 2.0) (Background on SQLAlchemy 2.0 at: https://sqlalche.me/e/b8d9)\n",
       "  Base = declarative_base()\n"
      ]
     }
@@ -134,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "1c711c48",
    "metadata": {},
    "outputs": [],
@@ -158,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "997bab2d",
    "metadata": {},
    "outputs": [],
@@ -180,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "b9e9186d",
    "metadata": {},
    "outputs": [],
@@ -202,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "id": "9cdcdff3",
    "metadata": {},
    "outputs": [],
@@ -224,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "c98a6f01",
    "metadata": {},
    "outputs": [
@@ -238,10 +246,10 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.Actor_film_mapping at 0x7efc61b92220>"
+       "<__main__.Actor_film_mapping at 0x7fe5ac42c760>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "12072ae8",
    "metadata": {},
    "outputs": [],
@@ -271,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "ed9fd71e",
    "metadata": {},
    "outputs": [
@@ -281,7 +289,7 @@
        "'Hello world'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "342ecd44",
    "metadata": {},
    "outputs": [
@@ -341,7 +349,7 @@
        " 'registry']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +369,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -375,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
