--- a/class05-sql-tasks/Exercise_sheet_7_alchemy.ipynb
+++ b/class05-sql-tasks/Exercise_sheet_7_alchemy.ipynb
@@ -25,10 +25,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import zipfile\n",
+    "\n",
+    "with zipfile.ZipFile('chinook.zip', 'r') as zip_ref:\n",
+    "    zip_ref.extractall()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -48,7 +62,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -62,7 +76,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
